fix: 당첨 번호 로직 수정